# BasicOfProjectActivity

./: .gitignore  BasicOfProjectActivity.sln  CMakeLists.txt
BasicOfProjectActivity/: BasicOfProjectActivity.cpp  BasicOfProjectActivity.vcxproj  BasicOfProjectActivity.vcxproj.filters  lab1_1.cpp  lab1_2.cpp
Game/: Bonus.cpp  Bonus.h  Bonuses.cpp  Bonuses.h  Defenitions.cpp  Defenitions.h  Enemies.cpp  Enemies.h  Enemy.cpp  Enemy.h  FirstLevelState.cpp  FirstLevelState.h  Game.cpp  Game.h  Game.sln  Game.vcxproj  Game.vcxproj.filters  GameMap.cpp  GameMap.h  GameOverState.cpp  GameOverState.h  MainMenuState.cpp  MainMenuState.h  Person.cpp  Person.h  Player.cpp  Player.h  SpriteMapper.cpp  SpriteMapper.h  State.h  StateManager.cpp  StateManager.h  UserInterface.cpp  UserInterface.h  main.cpp
lab1/: BasicOfProjectActivity.vcxproj  lab1_1.cpp  lab1_3.vcxproj
lab1_3/: lab1_3.cpp  lab1_3.vcxproj.filters
lab2_sfml/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  start.bat
lab2_sfml/00/: Makefile  cmake_install.cmake
lab2_sfml/01/: Makefile  cmake_install.cmake  main.cpp
lab2_sfml/02/: Makefile  cmake_install.cmake  main.cpp
lab2_sfml/03/: Makefile  cmake_install.cmake  main.cpp  (+1 more)
lab2_sfml/05_sfml1_3/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  start.bat
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lab4/: CMakeLists.txt
lab5/: CMakeLists.txt  start.bat
lab5/cat/: CMakeLists.txt  main.cpp  start.bat  window.cpp
lab5/cat_v2/: CMakeLists.txt  main.cpp  start.bat
lab5/cat_v3/: CMakeLists.txt  main.cpp  start.bat
(+37 files in other folders)
